--- a/report.tex
+++ b/report.tex
@@ -321,7 +321,7 @@ It is also necessary to connect every component with $V_{cc}$ and Ground to run 
 \includegraphics[width=8cm,height=6cm]{./Photos-001/out4}
 \vspace{20px}
 
-\section{\underline{Block Diagram :-}} :
+\section{\underline{Block Diagram :-}}
 The Block Diagram of the circuit of this experiment is as follow.
 
 \includegraphics[width=8cm,height=6cm]{./Photos-001/out5}
