--- a/report.tex
+++ b/report.tex
@@ -319,12 +319,14 @@ It is also necessary to connect every component with $V_{cc}$ and Ground to run 
 \vspace{20px}
 
 \includegraphics[width=8cm,height=6cm]{./Photos-001/out4}
+\centering{Circuit in Operation}
 \vspace{20px}
 
 \section{\underline{Block Diagram :-}}
 The Block Diagram of the circuit of this experiment is as follow.
 
 \includegraphics[width=8cm,height=6cm]{./Photos-001/out5}
+\centering{Block Diagram}
 \vspace{20px}
 
 \end{document} 
